unpackaged/main/default/objects/Competition__c/Competition__c.object-meta.xml
<CustomObject>
    <label>Competition</label>
    <nameField>
        <displayFormat>Comp-{000000000}</displayFormat>
        <label>Competition Record Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Competition Records</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>