unpackaged/main/default/objects/Competition__c/fields/Case__c.field-meta.xml
<CustomField>
    <fullName>Case__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Case</label>
    <referenceTo>Case</referenceTo>
    <relationshipLabel>Competition Records</relationshipLabel>
    <relationshipName>Competition_Records</relationshipName>
    <type>Lookup</type>
</CustomField>