unpackaged/main/default/objects/Competition__c/fields/Competitor_Combined__c.field-meta.xml
<CustomField>
    <fullName>Competitor_Combined__c</fullName>
    <formula>IF(ISPICKVAL(Competitor__c,"Other"),Competitor_Other__c,TEXT(Competitor__c))</formula>
    <label>Competitor</label>
    <type>Text</type>
</CustomField>