unpackaged/main/default/objects/Competition__c/fields/Competitor_Lead_Time_Days__c.field-meta.xml
<CustomField>
    <fullName>Competitor_Lead_Time_Days__c</fullName>
    <label>Competitor Lead Time (Days)</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>