unpackaged/main/default/objects/Competition__c/fields/Competitor_Total_Price__c.field-meta.xml
<CustomField>
    <fullName>Competitor_Total_Price__c</fullName>
    <inlineHelpText>Product Only</inlineHelpText>
    <label>Competitor Total Price</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>