unpackaged/main/default/objects/Competition__c/fields/Customer_Deadline__c.field-meta.xml
<CustomField>
    <fullName>Customer_Deadline__c</fullName>
    <inlineHelpText>When does the customer need their parts by?</inlineHelpText>
    <label>Customer Deadline</label>
    <type>Date</type>
</CustomField>