unpackaged/main/default/objects/Competition__c/fields/ERP_Quote_Id__c.field-meta.xml
<CustomField>
    <fullName>ERP_Quote_Id__c</fullName>
    <formula>Opportunity__r.Last_Quote_Xometry_ERP_ID__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>ERP Quote Id</label>
    <type>Text</type>
</CustomField>