unpackaged/main/default/objects/Competition__c/fields/Manufacturing_Origin_Requirement__c.field-meta.xml
<CustomField>
    <fullName>Manufacturing_Origin_Requirement__c</fullName>
    <label>Manufacturing Origin Requirement</label>
    <length>255</length>
    <type>Text</type>
</CustomField>