unpackaged/main/default/objects/Competition__c/fields/Opportunity__c.field-meta.xml
<CustomField>
    <fullName>Opportunity__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Opportunity</label>
    <referenceTo>Opportunity</referenceTo>
    <relationshipLabel>Competition Records</relationshipLabel>
    <relationshipName>Competition_Records</relationshipName>
    <type>Lookup</type>
</CustomField>