unpackaged/main/default/objects/Competition__c/fields/Price_Match_Requested__c.field-meta.xml
<CustomField>
    <fullName>Price_Match_Requested__c</fullName>
    <label>Price Match Requested</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>