unpackaged/main/default/objects/Competition__c/fields/Project__c.field-meta.xml
<CustomField>
    <fullName>Project__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Project</label>
    <referenceTo>Project__c</referenceTo>
    <relationshipLabel>Competition Records</relationshipLabel>
    <relationshipName>Competition_Records</relationshipName>
    <type>Lookup</type>
</CustomField>