unpackaged/main/default/objects/Competition__c/fields/Reason_Combined__c.field-meta.xml
<CustomField>
    <fullName>Reason_Combined__c</fullName>
    <formula>IF(ISPICKVAL(Reason__c,"Other"),Reason_Other__c,TEXT(Reason__c))</formula>
    <label>Reason</label>
    <type>Text</type>
</CustomField>