unpackaged/main/default/objects/Competition__c/fields/Reason_Other__c.field-meta.xml
<CustomField>
    <fullName>Reason_Other__c</fullName>
    <label>Reason (Other)</label>
    <length>255</length>
    <type>Text</type>
</CustomField>