unpackaged/main/default/objects/Competition__c/fields/Xometry_Lead_Time_Days__c.field-meta.xml
<CustomField>
    <fullName>Xometry_Lead_Time_Days__c</fullName>
    <label>Xometry Lead Time (Days)</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>