unpackaged/main/default/objects/Competition__c/fields/Xometry_Total_Price__c.field-meta.xml
<CustomField>
    <fullName>Xometry_Total_Price__c</fullName>
    <inlineHelpText>Pulled from Opportunity when this record was created.</inlineHelpText>
    <label>Xometry Total Price</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>